fixed flex overflow

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,6 @@ input {
 
 
 .links-n-buttons {
-    background-color: rgb(106, 116, 116);
     grid-column: 1;
     grid-row: 2;
 }
@@ -82,7 +81,10 @@ main {
     color: rgb(250, 245, 237);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    justify-content: center;
+
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 .cards {
     display: flex;
@@ -90,19 +92,23 @@ main {
     border: 1px solid wheat;
     height: 14rem;
     width: 12rem;
-    align-items: center;
     text-align: center;
+    align-items: center;
+
+    margin: 2rem;
     
-    margin: 5rem;
     padding: 1rem; 
 
     border-radius: 4rem 1rem;
     background-color: rgb(58, 69, 78);
+
 }
 
-
 .empty-container {
-    background-color: rgb(110, 119, 119);
     grid-row: 2;
     grid-column: 3;
+}
+
+aside {
+    background-color: rgb(74, 168, 255);;
 }
